Fix page number not showing

--- a/src/components/PaginationControls.module.css
+++ b/src/components/PaginationControls.module.css
@@ -30,6 +30,6 @@ input.pageNumber {
   font: inherit;
   color: inherit;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.05);
   height: 24px;
+  padding: 0;
 }
